--- a/ai.labzang.com/mlservice/requirements.txt
+++ b/ai.labzang.com/mlservice/requirements.txt
@@ -7,6 +7,11 @@ pydantic-settings>=2.0.0
 # 데이터 처리 및 분석
 pandas>=2.1.0
 numpy>=1.24.0
+openpyxl>=3.1.0
+xlrd==1.2.0  # .xls 파일 읽기 지원 (pandas 2.0+와 호환을 위해 명시적 버전 지정)
+
+# HTTP 요청 (Naver API 등)
+requests>=2.31.0
 
 # 머신러닝
 scikit-learn>=1.3.0
@@ -16,3 +21,20 @@ datasets>=2.14.0
 
 # 디버깅 도구 (아이스크립)
 icecream>=2.1.3
+
+# 지도 시각화
+folium>=0.14.0
+
+# 데이터 시각화
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# 자연어 처리 (NLP)
+nltk>=3.9.2
+wordcloud>=1.9.4
+transformers>=4.57.3
+sentencepiece>=0.2.1
+torchsummary>=1.5.1
+konlpy>=0.6.0
+opencv-python>=4.12.0
+jpype1>=1.6.0
